force-app/main/default/objects/VlocityEPCDeployDestination__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Template</label>
    <referenceTo>VlocityEPCConfiguration__c</referenceTo>
    <relationshipLabel>EPC Target Environments</relationshipLabel>
    <relationshipName>Vlocity_EPC_Deploy_Destinations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>