force-app/main/default/objects/VlocityEPCDeployDestination__c/fields/Last_Job_Execution__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Job Execution</label>
    <referenceTo>copado__JobExecution__c</referenceTo>
    <relationshipName>Vlocity_EPC_Deploy_Destinations</relationshipName>
    <type>Lookup</type>
</CustomField>